--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -84,7 +84,7 @@
                    <div class="overview-col">
                        <div class="welcome-text">
                        <h1>WELCOME TO TELINSO</h1>
-                        <h2>Hello<br><span>Comrade</span></h2>
+                        <h2>Hello <span>Comrade</span></h2>
                        <h2 id="greeting"></h2>
                        
                        </div>
