--- a/views/savedata.ejs
+++ b/views/savedata.ejs
@@ -161,14 +161,19 @@
                             
                             
                             <p id="coordinates">coordinates : </p>
-                            <div style="display: grid; grid-template-columns: auto;">
+                            <div style="display: grid; grid-template-columns: auto auto;">
                             <input type="hidden" id="coordinateValue" name="coordinates" value="">
-                          
+                            <p style="padding: 20 0;font-weight: bold;">Serial No :</p>
                             <input name="serialno" placeholder="Serial no" required>
+                            <p style="padding: 20 0;font-weight: bold;">Voter Name :</p>
                             <input  name="votername" placeholder="voter name" required>
+                            <p style="padding: 20 0;font-weight: bold;">House No :</p>
                             <input  name="houseno" placeholder="House No." required>
+                            <p style="padding: 20 0;font-weight: bold;">House Name :</p>
                             <input  name="housename" placeholder="House Name" required>
+                            <p style="padding: 20 0;font-weight: bold;">ID No :</p>
                             <input   name="idno" placeholder="ID Card No" required>
+                            <p style="padding: 20 0;font-weight: bold;">Booth No :</p>
                             <input   name="boothno" placeholder="Booth no" required>
                             <input  type="hidden" name="squadno" placeholder="Squad No:" value="1" required>
                             <input type="hidden"  name="votestatus" placeholder="" value="notvoted" required>
