--- a/views/voterlist.ejs
+++ b/views/voterlist.ejs
@@ -156,7 +156,7 @@
          
 
             <div>
-                <input type="text" id="myInput" onkeyup="searchData()" placeholder="&#128269; Search for Name , House name , Serial No" title="Type in a name">
+                <input type="text" id="myInput" onkeyup="searchData()" placeholder="&#128269; Name | House name | Serial No" title="Type in a name">
             </div>
            
                
