--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -155,7 +155,7 @@
                    <a href="/booth138" class="class2">
                    <div class="product-col" >
                        
-                    <i class="fa-brands fa-bootstrap"></i>
+                    <i class="fa-brands fa-slack"></i>
                             <div>
                             <h3>Booth 138</h3>
                             
@@ -167,7 +167,7 @@
                            </a>
                            <a href="/booth139" class="class3">    
                             <div class="product-col"  >
-                                <i class="fa-brands fa-bootstrap"></i>
+                                <i class="fa-brands fa-algolia"></i>
                                     <div>
                                     <h3>Booth 139</h3>
                                     
@@ -184,7 +184,7 @@
                
               <a href="/booth140" class="class4">
                <div class="product-col "  >
-                <i class="fa-brands fa-bootstrap"></i>
+                <i class="fa-brands fa-stack-overflow"></i>
                         <div>
                         <h3>Booth 140</h3>
                         
