--- a/views/138squad4.ejs
+++ b/views/138squad4.ejs
@@ -99,6 +99,9 @@
                     <a class="total-vote">Total Vote <br><h2 > <%= count %></h2></a>
                     <a class="vote-complete">Voted <br><h2 > <%= count1 %></h2></a>
                     <a class="vote-incomplete">Not Voted <br><h2 > <%= count2 %></h2></a>
+                    <a class="vote-availability">Unavailable <br><h2 > <%= count3 %></h2></a>
+                    <a class="vote-open">Open Vote <br><h2 > <%= count5 %></h2></a>
+                    <a class="vote-postal">Postal Vote <br><h2 > <%= count5 %></h2></a>
                    </div>
                </div>
                  
@@ -127,7 +130,7 @@
          <% soildatas.forEach((row,index) => { %>
            <gmp-advanced-marker
              position="<%= row.coordinates %>"
-             title="<%= row.name %> "
+             title="<%= row.housename %> "
              
              gmp-clickable
            ></gmp-advanced-marker>
@@ -145,7 +148,7 @@
          
 
             <div>
-                <input type="text" id="myInput" onkeyup="searchData()" placeholder="&#128269; Search for Soil Data" title="Type in a name">
+              <input type="text" id="myInput" onkeyup="searchData()" placeholder="&#128269; Name | House name | Serial No" title="Type in a name">
             </div>
            
                
