--- a/public/savedata.css
+++ b/public/savedata.css
@@ -13,12 +13,7 @@
   width: 100%;
   
 }
-.save-delete{
-  display: flex;
-  justify-content: space-evenly;
-  flex-direction: row;
-  flex-wrap: wrap;
-}
+
 .delete {
   padding: 19px;
   font-size: 20px;
@@ -117,43 +112,6 @@
 
 }
 
-.logo{
-  margin: 35px 80px;
-  top:10px;
-  left:10px;
-  position: absolute;
-}
-.logo span{
-  display: inline;
-  font-size: 30px;
-  text-decoration: none;
-  color: black;
-  outline: none;
-  left: 25px;
- 
-  position: absolute;
-}
-.logo img{
- 
-  width: 35px;
-  height: 35px;
-}
-nav{
-  display: flex;
-  align-items: center;
-  justify-content: space-evenly;
-  flex-wrap: wrap;
-  width: 100%;
-  background: white;
-  
-  
-}
-nav .navbtn{
-  margin: 20px;
-  top:10;
-  right:10;
-  position: absolute;
-}
 nav .hero-btn2{
   display: inline-block;
   text-decoration: none;
@@ -332,9 +290,7 @@ svg{
   margin: 10px ;
   padding: 10px;
 }
-.image{
-  padding:20px;
-}
+
 .data {
   color: black;
   padding: 10px 60px;
@@ -418,9 +374,23 @@ form .btn2:hover{
 
 .savedata{
 
-  box-shadow:  0px 0px 20px rgba(0, 0, 0, 0.3); 
+  box-shadow:  0px 0px 5px rgba(0, 0, 0, 0.1); 
   
   
+}
+.savedata select {
+  width: 100%;
+  padding: 10px 0;
+  cursor: pointer;
+  outline: none;
+  border: none;
+  margin: 10px 0;
+  border-radius: 4px;
+  font-size: 18px;
+  color: #fff;
+  text-align: center;
+  background: #1d1233;
+  transition: 0.2s ;
 }
 .file-upload{
   background: #1d1233;
@@ -443,10 +413,25 @@ form .btn2:hover{
 @media(max-width:800px){
 
   .header{
-    background-image:linear-gradient(to bottom, rgba(14, 13, 13, 0.838) 15%,transparent 90%),url(store.jpg);
-    height: 150px;
+    background-image:linear-gradient(to bottom, rgba(14, 13, 13, 0.838) 15%,transparent 90%),url(store.jpeg);
+    height: 350px;
     
     
+}
+.votestat{
+  display: grid;
+  grid-template-columns: auto auto;
+  padding: 10px;
+  margin: 10px;
+
+}
+.votestat a{
+  color: black;
+  box-shadow:  0px 0px 20px rgba(0, 0, 0, 0.1);
+  padding: 15px;
+  margin: 15px;
+  border-radius: 10px;
+
 }
 .save-delete{
   display: grid;
@@ -465,54 +450,7 @@ form .btn2:hover{
   width: 90%;
 }
 
-  .logo{
-    margin: 15px;
-    top:10px;
-    left:10px;
-    position: absolute;
-  }
-  .logo img{
-   
-    width: 35px;
-    height: 35px;
-  }
-  .text-box{
-      width:100%;
-      color: white;
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      text-align: center;
-      padding-left: 0px;
-     
   
-  }
-  
-  .text-box h1{
-      font-size: 80px;
-      font-family: system-ui;
-  }
-  .text-box h4{
-      font-size: 25px;
-      text-align: center;
-      padding: 15px 35px;
-      font-weight: 100;
-      font-family: system-ui;
-      
-      
-    
-  }
-
-  
-  .text-box p{
-      color: white;
-      font-size: 16px;
-      padding: 0px 35px;
-      font-weight: 100;
-      font-family: system-ui;
-  }
-  
-      
   .row{
       
       flex-direction: column;
@@ -564,26 +502,7 @@ form .btn2:hover{
    .view-change{
     display: inline;
    }
-  .text-box .hero-btn{
-      
-      padding: 16px 32px 16px 12px;
-      font-size: 14px;
-      margin-left: 5px;
-      font-family: system-ui;
-     
-    }
-    .text-box .hero-btn2{
-      
-      display: none;
-      
-    }
-    
-  .text-box .hero-btn:hover{
-      border-left: 30px solid #482b7c;
-      background: #482b7c;
-     color: white;
-     
-  }
+ 
   .overview{
       width: auto;
       padding: 0;
@@ -632,7 +551,7 @@ form .btn2:hover{
  }
 
   nav ul{
-      display: none;
+      display: block;
     }
     nav .fa-solid{
       display: block;
@@ -656,7 +575,7 @@ form .btn2:hover{
     display: none;
   }
   nav ul{
-    
+      background:linear-gradient(#251742,#482b7c) ;
       position: fixed;
       top: 0;
       right: -80%;
@@ -723,7 +642,6 @@ form .btn2:hover{
   nav ul li :hover{
  
     color: black;
-    color: rgb(207, 4, 4);
   }
   nav ul li a{
        color: white;
