--- a/views/test.ejs
+++ b/views/test.ejs
@@ -64,15 +64,17 @@
                 
                     <form action="/test" method="POST">
                         
-                        <input type="text" name="library" placeholder="Bin 1" required>
-                        <input type="text" name="canteen" placeholder="Bin 2" required>
-                        <input type="text" name="portico" placeholder="Bin 3" required>
-                        <input type="text" name="auditorium" placeholder="Bin 4" required> 
-                        <input type="text" name="ground" placeholder="Bin 5" required> 
+                        <input type="text" name="nitrogen" placeholder="nitrogen" required>
+                        <input type="text" name="phosphorous" placeholder="phosphorus" required>
+                        <input type="text" name="potassium" placeholder="potassium" required>
+                        <input type="text" name="ph" placeholder="pH" required>
+                        <input type="text" name="temperature" placeholder="temperature" required>
+                        <input type="text" name="humidity" placeholder="humidity" required>
+                        <input type="text" name="electrical_conductivity" placeholder="electrical conductivity" required>
+                        
                         
                         <button type="submit" class="btn btn2">Send</a></button>
                     </form> 
-                    
 
                  
                 </div>
