--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
 <html>
      <head>
          <meta name="viewport" content="width=device-width,initial-scale=1.0">
-         <title>REVIVE</title>
+         <title>TELINSO</title>
          
          <link rel="stylesheet" href="/home.css">
          <link rel="stylesheet" href="/navbar.css">
@@ -27,16 +27,22 @@
             <div class="container">
 
             <nav >
+                
+                    <a href="/" class="logo"><img src="/logo.png"></a>
               
-                <div class="navbtn">
-                <a href="/" class="hero-btn2 heronew"> Home </a>
-                <a href="#product" class="hero-btn2 heronew"> Product </a>
-                <a href="#about" class="hero-btn2 heronew"> About </a>
-                <a href="#contact" class="hero-btn2 heronew"> Contact </a>
-                <a href="login" class="hero-btn2"  ><i class="fa-solid fa-user"></i>Log in</a>
-                </div>
-                <i class="fa-solid fa-user fas" onclick="openmenu()"></i>
+                
+                    <i class="fa-solid fa-bars  fas" onclick="openmenu()"></i>
             
+
+                   <div class="navbtn">
+                   <a  class="hero-btn2 heronew"> Home </a>
+                   <a class="hero-btn2 heronew"> Product </a>
+                   <a class="hero-btn2 heronew"> About </a>
+                   <a class="hero-btn2 heronew"> Contact </a>
+                   <a class="hero-btn2 heronew"> Subscription </a>
+                   <a href="login" class="hero-btn2"  ><i class="fa-solid fa-user"></i>Login</a>
+                   </div>
+
                 <ul id="sidemenu">
                     <li><a href="" onclick="closemenu()" style="font-size: 13px;"><i class="fa-solid fa-xmark"></i></a></li>
                     <hr>
@@ -49,32 +55,24 @@
                         <li><a href="#contact">Contact</a></li>
                         <hr>
                         <p>
-                            Thank you for visiting Terono. We appreciate your interest and feedback. Contact us anytime
+                            Thank you for visiting Telinso. We appreciate your interest and feedback. Contact us anytime
                         </p>
                        
-                        <li><a href="login" class="login">Log in</a></li>
-                        <li><a href="/" class="login join">Join us</a></li>
-                   
-                       
-                        
-                </ul>
-                
-                
+                        <li><a href="login" class="login">Login</a></li>
+                        <li><a href="/" class="login join">Join us</a></li> </ul>
+               
+               
             </nav>
             
              <div class="text-box">
-                 <h1>TERONO</h1>
-                 <H4>Technology Enhanced Resource Optimization And Network Opportunity</H4>
+                 <h1>TELINSO</h1>
+                 <H4>TECHNOLOGY LEVERAGED INNOVATION FOR SOIL HEALTH</H4>
                  <P>
                     “We live in a smart world where technological trends and advancement are making life easier for everyone ”
                  </P>
-                 <a href="#conclusion" class="hero-btn"  >Explore now</a>
-                 
-               
-                 
-                 
-
+                 <a href="login" class="hero-btn"  >Login now</a>
              </div>
+
             </div>
              
          </section>
@@ -180,7 +178,6 @@
                              The forecasting section is where they will receive the five-day weather forecast in advance. </P>
                        
                            
-                           <a href="login" class="about-btn"  >Explore now</a>
                    </div>
                       
                </div>
@@ -245,36 +242,34 @@
                 
                 <div class="row">
                    <div class="conclusion-col">
-                    <div class="row-2">
+                    <div class="row-2 " >
                         <div class="conclusion-col2" >
                             
-                            <h3>Empowernment</h3>
-                            <p>Empower your soil journey with Telinso, unraveling the depths of soil health through diverse
+                            <h3>Empowernment <i class="fa-solid fa-plus"onclick="show('conclusion-para-1')"></i></h3>
+                            <p id="conclusion-para-1" style="display: none;">Empower your soil journey with Telinso, unraveling the depths of soil health through diverse
                                  parameters for sustainable agriculture enlightenment.</p>
                           
                                 </div>
                         <div class="conclusion-col2">
                             
-                                        <h3>Innovation</h3>
-                                        <p>Revitalize farming practices with Telinso's inventive solutions, exploring various soil parameters to foster 
+                                        <h3>Innovation <i class="fa-solid fa-plus"onclick="show('conclusion-para-2')"></i></h3>
+                                        <p id="conclusion-para-2" style="display: none;">Revitalize farming practices with Telinso's inventive solutions, exploring various soil parameters to foster 
                                             sustainable agriculture and cultivate healthier, thriving soils.</p>
         
                                    
                         </div>
-                    </div>
-                    <div class="row-2">
-                        
+                    
                              <div class="conclusion-col2" >
                                
-                                 <h3>Possibilities</h3>
-                                 <p>Unlock the endless possibilities beneath your feet. Telinso explores
+                                 <h3>Possibilities <i class="fa-solid fa-plus"onclick="show('conclusion-para-3')"></i></h3>
+                                 <p id="conclusion-para-3" style="display: none;">Unlock the endless possibilities beneath your feet. Telinso explores
                                      diverse soil parameters, revealing potential for sustainable farming and environmental resilience.</p>
                                
                              </div>
                              <div class="conclusion-col2"  >
                                  
-                                <h3>Collaboration</h3>
-                                <p>Foster agricultural harmony through Telinso's collaborative platform, uniting stakeholders to
+                                <h3>Collaboration <i class="fa-solid fa-plus" onclick="show('conclusion-para-4')"></i></h3>
+                                <p id="conclusion-para-4" style="display: none;">Foster agricultural harmony through Telinso's collaborative platform, uniting stakeholders to
                                      interpret soil parameters for informed decisions and collective efforts towards sustainable farming.</p>
 
                                         
@@ -304,6 +299,7 @@
                             </div>
                
            </section>
+           <!--
            <section class="team">
             <h1> Meet our team</h1>
             <div class="row">
@@ -345,6 +341,7 @@
             </div>
             
             </section>
+            -->
            <section id="contact" class="contact">
             <div class="row">
                <div class="contact-col">
@@ -428,6 +425,17 @@
                 </p>
          </div>
    </section>
-              
+              <script>
+                function show(id){
+                   conclusionElement= document.getElementById(id);
+                    if (conclusionElement.style.display === 'none') {
+       
+                    conclusionElement.style.display = 'flex';
+                } else {
+                
+                    conclusionElement.style.display = 'none';
+                }
+                }
+              </script>
          </body>
 </html>
